--- a/rps/package.json
+++ b/rps/package.json
@@ -2,6 +2,10 @@
   "name": "rps",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "npm": "6.12.0",
+    "node": "12.10.0"
+  }
   "dependencies": {
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
